// Vitest Snapshot v1

exports[`render > should render a properly formatted BBEdit theme file 1`] = `
"
        <?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
        <!DOCTYPE plist PUBLIC \\"-//Apple//DTD PLIST 1.0//EN\\" \\"http://www.apple.com/DTDs/PropertyList-1.0.dtd\\">
        <plist version=\\"1.0\\">
  <dict>
    <key>BackgroundColor</key>
    <string>rgba(0.1568627450980392, 0.14901960784313725, 0.1607843137254902, 1.00)</string>
    <key>DifferenceHighlightColor</key>
    <string>rgba(1, 0.8235294117647058, 0.2901960784313726, 1.00)</string>
    <key>InsertionPointLineHighlightColor</key>
    <string>rgba(0.2784313725490196, 0.25882352941176473, 0.2784313725490196, 1.00)</string>
    <key>InvisibleOthersColor</key>
    <string>rgba(0.9607843137254902, 0.3254901960784314, 0.7490196078431373, 1.00)</string>
    <key>InvisibleSpacesColor</key>
    <string>rgba(0.396078431372549, 0.3764705882352941, 0.4, 1.00)</string>
    <key>PrimaryHighlightColor</key>
    <string>rgba(0.2784313725490196, 0.25882352941176473, 0.2784313725490196, 1.00)</string>
    <key>SecondaryHighlightColor</key>
    <string>rgba(0.396078431372549, 0.3764705882352941, 0.4, 1.00)</string>
    <key>SpellingColor</key>
    <string>rgba(1, 0.25098039215686274, 0.3137254901960784, 1.00)</string>
    <key>com.barebones.bblm.JavaScript.error</key>
    <string>rgba(1, 0.25098039215686274, 0.3137254901960784, 1.00)</string>
    <key>com.barebones.bblm.JavaScript.regexp</key>
    <string>rgba(0.9607843137254902, 0.3254901960784314, 0.7490196078431373, 1.00)</string>
    <key>com.barebones.bblm.Pyth.decorator</key>
    <string>rgba(0.14901960784313725, 0.788235294117647, 0.6196078431372549, 1.00)</string>
    <key>com.barebones.bblm.Pyth.triple-string</key>
    <string>rgba(0.6431372549019608, 0.8, 0.20784313725490197, 1.00)</string>
    <key>com.barebones.bblm.TeX.math-string</key>
    <string>rgba(0.6431372549019608, 0.8, 0.20784313725490197, 1.00)</string>
    <key>com.barebones.bblm.TeX.param-content</key>
    <string>rgba(0.4, 0.7490196078431373, 1, 1.00)</string>
    <key>com.barebones.bblm.TeX.verbatim</key>
    <string>rgba(1, 0.8235294117647058, 0.2901960784313726, 1.00)</string>
    <key>com.barebones.bblm.code</key>
    <string>rgba(1, 0.9882352941176471, 1, 1.00)</string>
    <key>com.barebones.bblm.comment</key>
    <string>rgba(0.396078431372549, 0.3764705882352941, 0.4, 1.00)</string>
    <key>com.barebones.bblm.css.color-spec</key>
    <string>rgba(1, 0.9882352941176471, 1, 1.00)</string>
    <key>com.barebones.bblm.file-include</key>
    <string>rgba(0.8, 0.47058823529411764, 0.9803921568627451, 1.00)</string>
    <key>com.barebones.bblm.grep.charclass</key>
    <string>rgba(0.4, 0.7490196078431373, 1, 1.00)</string>
    <key>com.barebones.bblm.grep.escape-sequence</key>
    <string>rgba(0.9607843137254902, 0.3254901960784314, 0.7490196078431373, 1.00)</string>
    <key>com.barebones.bblm.grep.metachar</key>
    <string>rgba(0.14901960784313725, 0.788235294117647, 0.6196078431372549, 1.00)</string>
    <key>com.barebones.bblm.grep.metasequence</key>
    <string>rgba(0.6431372549019608, 0.8, 0.20784313725490197, 1.00)</string>
    <key>com.barebones.bblm.grep.posix-name</key>
    <string>rgba(1, 0.8235294117647058, 0.2901960784313726, 1.00)</string>
    <key>com.barebones.bblm.grep.repeat</key>
    <string>rgba(1, 0.8235294117647058, 0.2901960784313726, 1.00)</string>
    <key>com.barebones.bblm.grep.repeat-data</key>
    <string>rgba(1, 0.8235294117647058, 0.2901960784313726, 1.00)</string>
    <key>com.barebones.bblm.heredoc-string</key>
    <string>rgba(1, 0.9882352941176471, 1, 1.00)</string>
    <key>com.barebones.bblm.html.anchor</key>
    <string>rgba(0.4, 0.7490196078431373, 1, 1.00)</string>
    <key>com.barebones.bblm.html.attribute-name</key>
    <string>rgba(0.4, 0.7490196078431373, 1, 1.00)</string>
    <key>com.barebones.bblm.html.attribute-value</key>
    <string>rgba(0.6431372549019608, 0.8, 0.20784313725490197, 1.00)</string>
    <key>com.barebones.bblm.html.image</key>
    <string>rgba(0.8, 0.47058823529411764, 0.9803921568627451, 1.00)</string>
    <key>com.barebones.bblm.indexed-symbol</key>
    <string>rgba(1, 0.8235294117647058, 0.2901960784313726, 1.00)</string>
    <key>com.barebones.bblm.keyword</key>
    <string>rgba(1, 0.25098039215686274, 0.3137254901960784, 1.00)</string>
    <key>com.barebones.bblm.markdown.Emph</key>
    <string>rgba(0.9490196078431372, 0.5058823529411764, 0.26666666666666666, 1.00)</string>
    <key>com.barebones.bblm.markdown.HorizontalRule</key>
    <string>rgba(0.6352941176470588, 0.615686274509804, 0.6392156862745098, 1.00)</string>
    <key>com.barebones.bblm.markdown.ImageAltText</key>
    <string>rgba(0.8, 0.47058823529411764, 0.9803921568627451, 1.00)</string>
    <key>com.barebones.bblm.markdown.ImageId</key>
    <string>rgba(0.7568627450980392, 0.7372549019607844, 0.7607843137254902, 1.00)</string>
    <key>com.barebones.bblm.markdown.InlineCode</key>
    <string>rgba(1, 0.25098039215686274, 0.3137254901960784, 1.00)</string>
    <key>com.barebones.bblm.markdown.InlineLinkText</key>
    <string>rgba(0.4, 0.7490196078431373, 1, 1.00)</string>
    <key>com.barebones.bblm.markdown.Keyword</key>
    <string>rgba(1, 0.8235294117647058, 0.2901960784313726, 1.00)</string>
    <key>com.barebones.bblm.markdown.LinkDefId</key>
    <string>rgba(0.4, 0.7490196078431373, 1, 1.00)</string>
    <key>com.barebones.bblm.markdown.LinkDefTitle</key>
    <string>rgba(0.4, 0.7490196078431373, 1, 1.00)</string>
    <key>com.barebones.bblm.markdown.LinkDefUrl</key>
    <string>rgba(0.4, 0.7490196078431373, 1, 1.00)</string>
    <key>com.barebones.bblm.markdown.ListItemMarker</key>
    <string>rgba(0.4, 0.7490196078431373, 1, 1.00)</string>
    <key>com.barebones.bblm.markdown.Pre</key>
    <string>rgba(1, 0.25098039215686274, 0.3137254901960784, 1.00)</string>
    <key>com.barebones.bblm.markdown.QuoteMarker</key>
    <string>rgba(0.9607843137254902, 0.3254901960784314, 0.7490196078431373, 1.00)</string>
    <key>com.barebones.bblm.markdown.QuotedContent</key>
    <string>rgba(1, 0.9882352941176471, 1, 1.00)</string>
    <key>com.barebones.bblm.number</key>
    <string>rgba(0.4, 0.7490196078431373, 1, 1.00)</string>
    <key>com.barebones.bblm.perl.generic-string</key>
    <string>rgba(0.6431372549019608, 0.8, 0.20784313725490197, 1.00)</string>
    <key>com.barebones.bblm.perl.outer-pod</key>
    <string>rgba(0.9607843137254902, 0.3254901960784314, 0.7490196078431373, 1.00)</string>
    <key>com.barebones.bblm.perl.pre-generic-string</key>
    <string>rgba(0.6431372549019608, 0.8, 0.20784313725490197, 1.00)</string>
    <key>com.barebones.bblm.predefined-symbol</key>
    <string>rgba(1, 0.8235294117647058, 0.2901960784313726, 1.00)</string>
    <key>com.barebones.bblm.preprocessor</key>
    <string>rgba(1, 0.8235294117647058, 0.2901960784313726, 1.00)</string>
    <key>com.barebones.bblm.ruby.regexp</key>
    <string>rgba(0.9607843137254902, 0.3254901960784314, 0.7490196078431373, 1.00)</string>
    <key>com.barebones.bblm.ruby.symbol</key>
    <string>rgba(1, 0.8235294117647058, 0.2901960784313726, 1.00)</string>
    <key>com.barebones.bblm.sgml-cdata</key>
    <string>rgba(1, 0.9882352941176471, 1, 1.00)</string>
    <key>com.barebones.bblm.sgml-decl</key>
    <string>rgba(0.9607843137254902, 0.3254901960784314, 0.7490196078431373, 1.00)</string>
    <key>com.barebones.bblm.sgml-entity</key>
    <string>rgba(0.4, 0.7490196078431373, 1, 1.00)</string>
    <key>com.barebones.bblm.sgml-tag</key>
    <string>rgba(0.4, 0.7490196078431373, 1, 1.00)</string>
    <key>com.barebones.bblm.string</key>
    <string>rgba(0.6431372549019608, 0.8, 0.20784313725490197, 1.00)</string>
    <key>com.barebones.bblm.variable</key>
    <string>rgba(0.9607843137254902, 0.3254901960784314, 0.7490196078431373, 1.00)</string>
    <key>com.barebones.bblm.verilog-hdl.comment-1</key>
    <string>rgba(0.396078431372549, 0.3764705882352941, 0.4, 1.00)</string>
    <key>com.barebones.bblm.verilog-hdl.comment-2</key>
    <string>rgba(0.5176470588235295, 0.49411764705882355, 0.5215686274509804, 1.00)</string>
    <key>com.barebones.bblm.verilog-hdl.comment-3</key>
    <string>rgba(0.6352941176470588, 0.615686274509804, 0.6392156862745098, 1.00)</string>
    <key>com.barebones.bblm.verilog-hdl.input-type</key>
    <string>rgba(0.14901960784313725, 0.788235294117647, 0.6196078431372549, 1.00)</string>
    <key>com.barebones.bblm.verilog-hdl.output-type</key>
    <string>rgba(0.8, 0.47058823529411764, 0.9803921568627451, 1.00)</string>
    <key>com.barebones.bblm.verilog-hdl.register-type</key>
    <string>rgba(1, 0.8235294117647058, 0.2901960784313726, 1.00)</string>
    <key>com.barebones.bblm.verilog-hdl.wire-type</key>
    <string>rgba(0.9490196078431372, 0.5058823529411764, 0.26666666666666666, 1.00)</string>
    <key>com.barebones.bblm.vhdl.comment-1</key>
    <string>rgba(0.396078431372549, 0.3764705882352941, 0.4, 1.00)</string>
    <key>com.barebones.bblm.vhdl.comment-2</key>
    <string>rgba(0.5176470588235295, 0.49411764705882355, 0.5215686274509804, 1.00)</string>
    <key>com.barebones.bblm.vhdl.comment-3</key>
    <string>rgba(0.6352941176470588, 0.615686274509804, 0.6392156862745098, 1.00)</string>
    <key>com.barebones.bblm.xml-empty</key>
    <string>rgba(1, 0.25098039215686274, 0.3137254901960784, 1.00)</string>
    <key>com.barebones.bblm.xml-pi</key>
    <string>rgba(1, 0.25098039215686274, 0.3137254901960784, 1.00)</string>
  </dict>
</plist>
      "
`;

exports[`render > should render a properly formatted BBEdit theme file 2`] = `
"
        <?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
        <!DOCTYPE plist PUBLIC \\"-//Apple//DTD PLIST 1.0//EN\\" \\"http://www.apple.com/DTDs/PropertyList-1.0.dtd\\">
        <plist version=\\"1.0\\">
  <dict>
    <key>BackgroundColor</key>
    <string>rgba(1, 0.9882352941176471, 1, 1.00)</string>
    <key>DifferenceHighlightColor</key>
    <string>rgba(0.9333333333333333, 0.7294117647058823, 0.12941176470588237, 1.00)</string>
    <key>InsertionPointLineHighlightColor</key>
    <string>rgba(0.8784313725490196, 0.8627450980392157, 0.8784313725490196, 1.00)</string>
    <key>InvisibleOthersColor</key>
    <string>rgba(0.9333333333333333, 0.3058823529411765, 0.7215686274509804, 1.00)</string>
    <key>InvisibleSpacesColor</key>
    <string>rgba(0.7568627450980392, 0.7372549019607844, 0.7607843137254902, 1.00)</string>
    <key>PrimaryHighlightColor</key>
    <string>rgba(0.8784313725490196, 0.8627450980392157, 0.8784313725490196, 1.00)</string>
    <key>SecondaryHighlightColor</key>
    <string>rgba(0.7568627450980392, 0.7372549019607844, 0.7607843137254902, 1.00)</string>
    <key>SpellingColor</key>
    <string>rgba(0.9411764705882353, 0.24313725490196078, 0.30196078431372547, 1.00)</string>
    <key>com.barebones.bblm.JavaScript.error</key>
    <string>rgba(0.9411764705882353, 0.24313725490196078, 0.30196078431372547, 1.00)</string>
    <key>com.barebones.bblm.JavaScript.regexp</key>
    <string>rgba(0.9333333333333333, 0.3058823529411765, 0.7215686274509804, 1.00)</string>
    <key>com.barebones.bblm.Pyth.decorator</key>
    <string>rgba(0.12156862745098039, 0.7725490196078432, 0.596078431372549, 1.00)</string>
    <key>com.barebones.bblm.Pyth.triple-string</key>
    <string>rgba(0.592156862745098, 0.7411764705882353, 0.17647058823529413, 1.00)</string>
    <key>com.barebones.bblm.TeX.math-string</key>
    <string>rgba(0.592156862745098, 0.7411764705882353, 0.17647058823529413, 1.00)</string>
    <key>com.barebones.bblm.TeX.param-content</key>
    <string>rgba(0.3254901960784314, 0.6509803921568628, 0.8823529411764706, 1.00)</string>
    <key>com.barebones.bblm.TeX.verbatim</key>
    <string>rgba(0.9333333333333333, 0.7294117647058823, 0.12941176470588237, 1.00)</string>
    <key>com.barebones.bblm.code</key>
    <string>rgba(0.1568627450980392, 0.14901960784313725, 0.1607843137254902, 1.00)</string>
    <key>com.barebones.bblm.comment</key>
    <string>rgba(0.7568627450980392, 0.7372549019607844, 0.7607843137254902, 1.00)</string>
    <key>com.barebones.bblm.css.color-spec</key>
    <string>rgba(0.1568627450980392, 0.14901960784313725, 0.1607843137254902, 1.00)</string>
    <key>com.barebones.bblm.file-include</key>
    <string>rgba(0.7490196078431373, 0.396078431372549, 0.9411764705882353, 1.00)</string>
    <key>com.barebones.bblm.grep.charclass</key>
    <string>rgba(0.3254901960784314, 0.6509803921568628, 0.8823529411764706, 1.00)</string>
    <key>com.barebones.bblm.grep.escape-sequence</key>
    <string>rgba(0.9333333333333333, 0.3058823529411765, 0.7215686274509804, 1.00)</string>
    <key>com.barebones.bblm.grep.metachar</key>
    <string>rgba(0.12156862745098039, 0.7725490196078432, 0.596078431372549, 1.00)</string>
    <key>com.barebones.bblm.grep.metasequence</key>
    <string>rgba(0.592156862745098, 0.7411764705882353, 0.17647058823529413, 1.00)</string>
    <key>com.barebones.bblm.grep.posix-name</key>
    <string>rgba(0.9333333333333333, 0.7294117647058823, 0.12941176470588237, 1.00)</string>
    <key>com.barebones.bblm.grep.repeat</key>
    <string>rgba(0.9333333333333333, 0.7294117647058823, 0.12941176470588237, 1.00)</string>
    <key>com.barebones.bblm.grep.repeat-data</key>
    <string>rgba(0.9333333333333333, 0.7294117647058823, 0.12941176470588237, 1.00)</string>
    <key>com.barebones.bblm.heredoc-string</key>
    <string>rgba(0.1568627450980392, 0.14901960784313725, 0.1607843137254902, 1.00)</string>
    <key>com.barebones.bblm.html.anchor</key>
    <string>rgba(0.3254901960784314, 0.6509803921568628, 0.8823529411764706, 1.00)</string>
    <key>com.barebones.bblm.html.attribute-name</key>
    <string>rgba(0.3254901960784314, 0.6509803921568628, 0.8823529411764706, 1.00)</string>
    <key>com.barebones.bblm.html.attribute-value</key>
    <string>rgba(0.592156862745098, 0.7411764705882353, 0.17647058823529413, 1.00)</string>
    <key>com.barebones.bblm.html.image</key>
    <string>rgba(0.7490196078431373, 0.396078431372549, 0.9411764705882353, 1.00)</string>
    <key>com.barebones.bblm.indexed-symbol</key>
    <string>rgba(0.9333333333333333, 0.7294117647058823, 0.12941176470588237, 1.00)</string>
    <key>com.barebones.bblm.keyword</key>
    <string>rgba(0.9411764705882353, 0.24313725490196078, 0.30196078431372547, 1.00)</string>
    <key>com.barebones.bblm.markdown.Emph</key>
    <string>rgba(0.9529411764705882, 0.4666666666666667, 0.20784313725490197, 1.00)</string>
    <key>com.barebones.bblm.markdown.HorizontalRule</key>
    <string>rgba(0.5176470588235295, 0.49411764705882355, 0.5215686274509804, 1.00)</string>
    <key>com.barebones.bblm.markdown.ImageAltText</key>
    <string>rgba(0.7490196078431373, 0.396078431372549, 0.9411764705882353, 1.00)</string>
    <key>com.barebones.bblm.markdown.ImageId</key>
    <string>rgba(0.396078431372549, 0.3764705882352941, 0.4, 1.00)</string>
    <key>com.barebones.bblm.markdown.InlineCode</key>
    <string>rgba(0.9411764705882353, 0.24313725490196078, 0.30196078431372547, 1.00)</string>
    <key>com.barebones.bblm.markdown.InlineLinkText</key>
    <string>rgba(0.3254901960784314, 0.6509803921568628, 0.8823529411764706, 1.00)</string>
    <key>com.barebones.bblm.markdown.Keyword</key>
    <string>rgba(0.9333333333333333, 0.7294117647058823, 0.12941176470588237, 1.00)</string>
    <key>com.barebones.bblm.markdown.LinkDefId</key>
    <string>rgba(0.3254901960784314, 0.6509803921568628, 0.8823529411764706, 1.00)</string>
    <key>com.barebones.bblm.markdown.LinkDefTitle</key>
    <string>rgba(0.3254901960784314, 0.6509803921568628, 0.8823529411764706, 1.00)</string>
    <key>com.barebones.bblm.markdown.LinkDefUrl</key>
    <string>rgba(0.3254901960784314, 0.6509803921568628, 0.8823529411764706, 1.00)</string>
    <key>com.barebones.bblm.markdown.ListItemMarker</key>
    <string>rgba(0.3254901960784314, 0.6509803921568628, 0.8823529411764706, 1.00)</string>
    <key>com.barebones.bblm.markdown.Pre</key>
    <string>rgba(0.9411764705882353, 0.24313725490196078, 0.30196078431372547, 1.00)</string>
    <key>com.barebones.bblm.markdown.QuoteMarker</key>
    <string>rgba(0.9333333333333333, 0.3058823529411765, 0.7215686274509804, 1.00)</string>
    <key>com.barebones.bblm.markdown.QuotedContent</key>
    <string>rgba(0.1568627450980392, 0.14901960784313725, 0.1607843137254902, 1.00)</string>
    <key>com.barebones.bblm.number</key>
    <string>rgba(0.3254901960784314, 0.6509803921568628, 0.8823529411764706, 1.00)</string>
    <key>com.barebones.bblm.perl.generic-string</key>
    <string>rgba(0.592156862745098, 0.7411764705882353, 0.17647058823529413, 1.00)</string>
    <key>com.barebones.bblm.perl.outer-pod</key>
    <string>rgba(0.9333333333333333, 0.3058823529411765, 0.7215686274509804, 1.00)</string>
    <key>com.barebones.bblm.perl.pre-generic-string</key>
    <string>rgba(0.592156862745098, 0.7411764705882353, 0.17647058823529413, 1.00)</string>
    <key>com.barebones.bblm.predefined-symbol</key>
    <string>rgba(0.9333333333333333, 0.7294117647058823, 0.12941176470588237, 1.00)</string>
    <key>com.barebones.bblm.preprocessor</key>
    <string>rgba(0.9333333333333333, 0.7294117647058823, 0.12941176470588237, 1.00)</string>
    <key>com.barebones.bblm.ruby.regexp</key>
    <string>rgba(0.9333333333333333, 0.3058823529411765, 0.7215686274509804, 1.00)</string>
    <key>com.barebones.bblm.ruby.symbol</key>
    <string>rgba(0.9333333333333333, 0.7294117647058823, 0.12941176470588237, 1.00)</string>
    <key>com.barebones.bblm.sgml-cdata</key>
    <string>rgba(0.1568627450980392, 0.14901960784313725, 0.1607843137254902, 1.00)</string>
    <key>com.barebones.bblm.sgml-decl</key>
    <string>rgba(0.9333333333333333, 0.3058823529411765, 0.7215686274509804, 1.00)</string>
    <key>com.barebones.bblm.sgml-entity</key>
    <string>rgba(0.3254901960784314, 0.6509803921568628, 0.8823529411764706, 1.00)</string>
    <key>com.barebones.bblm.sgml-tag</key>
    <string>rgba(0.3254901960784314, 0.6509803921568628, 0.8823529411764706, 1.00)</string>
    <key>com.barebones.bblm.string</key>
    <string>rgba(0.592156862745098, 0.7411764705882353, 0.17647058823529413, 1.00)</string>
    <key>com.barebones.bblm.variable</key>
    <string>rgba(0.9333333333333333, 0.3058823529411765, 0.7215686274509804, 1.00)</string>
    <key>com.barebones.bblm.verilog-hdl.comment-1</key>
    <string>rgba(0.7568627450980392, 0.7372549019607844, 0.7607843137254902, 1.00)</string>
    <key>com.barebones.bblm.verilog-hdl.comment-2</key>
    <string>rgba(0.6352941176470588, 0.615686274509804, 0.6392156862745098, 1.00)</string>
    <key>com.barebones.bblm.verilog-hdl.comment-3</key>
    <string>rgba(0.5176470588235295, 0.49411764705882355, 0.5215686274509804, 1.00)</string>
    <key>com.barebones.bblm.verilog-hdl.input-type</key>
    <string>rgba(0.12156862745098039, 0.7725490196078432, 0.596078431372549, 1.00)</string>
    <key>com.barebones.bblm.verilog-hdl.output-type</key>
    <string>rgba(0.7490196078431373, 0.396078431372549, 0.9411764705882353, 1.00)</string>
    <key>com.barebones.bblm.verilog-hdl.register-type</key>
    <string>rgba(0.9333333333333333, 0.7294117647058823, 0.12941176470588237, 1.00)</string>
    <key>com.barebones.bblm.verilog-hdl.wire-type</key>
    <string>rgba(0.9529411764705882, 0.4666666666666667, 0.20784313725490197, 1.00)</string>
    <key>com.barebones.bblm.vhdl.comment-1</key>
    <string>rgba(0.7568627450980392, 0.7372549019607844, 0.7607843137254902, 1.00)</string>
    <key>com.barebones.bblm.vhdl.comment-2</key>
    <string>rgba(0.6352941176470588, 0.615686274509804, 0.6392156862745098, 1.00)</string>
    <key>com.barebones.bblm.vhdl.comment-3</key>
    <string>rgba(0.5176470588235295, 0.49411764705882355, 0.5215686274509804, 1.00)</string>
    <key>com.barebones.bblm.xml-empty</key>
    <string>rgba(0.9411764705882353, 0.24313725490196078, 0.30196078431372547, 1.00)</string>
    <key>com.barebones.bblm.xml-pi</key>
    <string>rgba(0.9411764705882353, 0.24313725490196078, 0.30196078431372547, 1.00)</string>
  </dict>
</plist>
      "
`;

exports[`renderInstructions > should provide installation instructions 1`] = `
"
Copy (or symlink) the files to \`~/Library/Application Support/BBEdit/Color Schemes/\`:

    cp 'Themer Dark.bbColorScheme' '~/Library/Application Support/BBEdit/Color Schemes/'
    cp 'Themer Light.bbColorScheme' '~/Library/Application Support/BBEdit/Color Schemes/'
"
`;
